syntax="proto3";

package auth;

option go_package = "github.com/TATAROmangol/auth/pkg/grpc/auth;auth";

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest{
    string name = 1;
    string password = 2;
}

message RegisterResponse{
    int64 user_id = 1;
}

message LoginRequest{
    string name = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
}
